# EduIA

./: .dockerignore  .env  .gitignore  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
client/: .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
client/public/assets/data/: disciplinas.js
client/src/: globals.css  index.css  layout.jsx  main.jsx
client/src/api/: auth.js  csrf.js  materials.js
client/src/components/card/: index.jsx
client/src/components/footer/: index.jsx
client/src/components/header/: index.jsx
client/src/components/inputRange/: index.jsx
client/src/context/: authContext.jsx  messagesContext.jsx  wrapperProvider.jsx
docs/: docker-model-runner-guia.md  framework_e_llm.md  huggingface.md  requisitos_funcionais.md  requisitos_nao_funcionais.md  runner-commands.md
server/: Dockerfile  app.py  pyproject.toml  requirements.txt  test_ia.py
server/config/: __init__.py
server/controllers/: __init__.py  auth.py  materials.py  user.py
server/database/: __init__.py
server/models/: __init__.py  aluno.py  connection.py  database.py  desafios.py  exercicios_guiados.py  explicacoes.py  flashcards.py  formularios.py  material.py  planos_de_aula.py  professor.py  questoes.py  quizzes.py  resumos.py  roteiros.py  user.py
server/schemas/: __init__.py  desafios.py  exercicios_guiados.py  explicacoes.py  flashcards.py  formularios.py  planos_de_aula.py  questoes.py  quizzes.py  resumos.py  roteiros.py
server/utils/: __init__.py
(+42 files in other folders)
