[project]
name = "server"
version = "0.1.0"
description = "Backend do sistema EduIA"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-login>=0.6.3",
    "flask-wtf>=1.3.0",
    "langchain>=1.3.14",
    "langchain-core>=1.5.0",
    "langchain-openai>=1.4.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[tool.ruff]
include = ["*.py"]
line-length = 120

[tool.ruff.format]
quote-style = "single"
